# patch-fixer

./: .gitignore  CHANGELOG.md  README.md  conftest.py  patch_fixer.py  pyproject.toml  test_generator.py
patch_fixer/: analyzer.py  diff.py  errors.py  file.py  hunk.py  patch_fixer.py  patch_processor.py  regex.py  split.py  transformers.py  utils.py  validators.py
tests/: repos.py  test_analyzer.py  test_cli.py  test_file.py  test_fuzzy.py  test_hunk_finding.py  test_norm.py  test_repos.py  test_split.py  test_transformers.py  test_validators.py
tests/data/: complexity_analyzer.a.diff  complexity_analyzer.b.diff  complexity_analyzer.py
